--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
   },
   "homepage": "https://github.com/overture-stack/lectern#readme",
   "devDependencies": {
+    "@types/body-parser": "^1.17.0",
     "@types/dotenv": "^6.1.1",
     "@types/errorhandler": "0.0.32",
     "@types/express": "^4.17.0",
+    "@types/mongoose": "^5.5.7",
     "concurrently": "^4.1.1",
     "nodemon": "^1.19.1",
     "ts-node": "^8.3.0",
@@ -36,8 +38,10 @@
     "typescript": "^3.5.2"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^8.0.0",
     "errorhandler": "^1.5.1",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.6.2"
   }
 }
