--- a/package.json
+++ b/package.json
@@ -27,11 +27,15 @@
   "homepage": "https://github.com/overture-stack/lectern#readme",
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
+    "@types/chai": "^4.1.7",
     "@types/dotenv": "^6.1.1",
     "@types/errorhandler": "0.0.32",
     "@types/express": "^4.17.0",
+    "@types/mocha": "^5.2.7",
     "@types/mongoose": "^5.5.7",
+    "chai": "^4.2.0",
     "concurrently": "^4.1.1",
+    "mocha": "^6.1.4",
     "nodemon": "^1.19.1",
     "ts-node": "^8.3.0",
     "tslint": "^5.18.0",
