--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/express": "^4.17.0",
     "@types/mocha": "^5.2.7",
     "@types/mongoose": "^5.5.7",
+    "@types/winston": "^2.4.4",
     "chai": "^4.2.0",
     "concurrently": "^4.1.1",
     "mocha": "^6.1.4",
@@ -46,6 +47,7 @@
     "dotenv": "^8.0.0",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
-    "mongoose": "^5.6.2"
+    "mongoose": "^5.6.2",
+    "winston": "^3.2.1"
   }
 }
