--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "typescript": "^3.5.2"
   },
   "dependencies": {
+    "ajv": "^6.10.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.0.0",
     "errorhandler": "^1.5.1",
