--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "@types/mongoose": "^5.5.7",
     "@types/winston": "^2.4.4",
     "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "concurrently": "^4.1.1",
     "mocha": "^6.1.4",
     "nodemon": "^1.19.1",
+    "testcontainers": "^1.1.19",
     "ts-node": "^8.3.0",
     "tslint": "^5.18.0",
     "typescript": "^3.5.2"
