--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
     "@types/chai": "^4.1.7",
+    "@types/chai-http": "^4.2.0",
     "@types/dotenv": "^6.1.1",
     "@types/errorhandler": "0.0.32",
     "@types/express": "^4.17.0",
