--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/express": "^4.17.0",
     "@types/mocha": "^5.2.7",
     "@types/mongoose": "^5.5.7",
+    "@types/swagger-ui-express": "^3.0.1",
     "@types/winston": "^2.4.4",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
@@ -52,6 +53,7 @@
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
     "mongoose": "^5.6.2",
+    "swagger-ui-express": "^4.0.7",
     "winston": "^3.2.1"
   }
 }
