--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/dotenv": "^6.1.1",
     "@types/errorhandler": "0.0.32",
     "@types/express": "^4.17.0",
+    "@types/lodash": "^4.14.136",
     "@types/mocha": "^5.2.7",
     "@types/mongoose": "^5.5.7",
     "@types/swagger-ui-express": "^3.0.1",
@@ -45,7 +46,7 @@
     "testcontainers": "^1.1.19",
     "ts-node": "^8.3.0",
     "tslint": "^5.18.0",
-    "typescript": "^3.5.2"
+    "typescript": "^3.5.3"
   },
   "dependencies": {
     "ajv": "^6.10.0",
@@ -53,6 +54,7 @@
     "dotenv": "^8.0.0",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
+    "lodash": "^4.17.15",
     "mongoose": "^5.6.2",
     "swagger-ui-express": "^4.0.7",
     "winston": "^3.2.1"
