--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lectern",
-  "version": "1.1.7",
+  "version": "1.1.8",
   "description": "Data Dictionary Management",
   "scripts": {
     "start": "npm run serve",
@@ -14,7 +14,9 @@
     "tslint": "tslint -c tslint.json -p tsconfig.json",
     "debug": "npm run build && npm run watch-debug",
     "serve-debug": "nodemon --inspect dist/server.js",
-    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run serve-debug\""
+    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run serve-debug\"",
+    "gitmoji-config": "gitmoji -g",
+    "commit": "gitmoji -c"
   },
   "repository": {
     "type": "git",
@@ -45,6 +47,8 @@
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "concurrently": "^4.1.1",
+    "gitmoji-cli": "^2.0.0",
+    "husky": "^3.0.5",
     "mocha": "^6.1.4",
     "nodemon": "^1.19.1",
     "testcontainers": "^1.1.19",
