--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,17 @@ MONGO_DB=
 MONGO_USER=
 MONGO_PASS=
 
-# Auth Config
+# Auth Configuration
 AUTH_ENABLED=false
 EGO_API=
 SCOPE=
+
+# Vault Configuration
+VAULT_ENABLED=false
+VAULT_URL=http://localhost:8200
+VAULT_SECRET_PATH=/kv/lectern
+# Vault Token Auth
+VAULT_TOKEN=00000000-0000-0000-0000-000000000000
+# Vault K8s AUth
+VAULT_ROLE=
+VAULT_KUBERNETES_SECRET_FILE=
