--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/mocha": "^5.2.7",
     "@types/mongoose": "^5.5.7",
     "@types/ms": "^0.7.30",
+    "@types/node-vault": "^0.9.0",
     "@types/swagger-ui-express": "^3.0.1",
     "@types/winston": "^2.4.4",
     "chai": "^4.2.0",
@@ -68,6 +69,7 @@
     "memoizee": "^0.4.14",
     "mongoose": "^5.6.2",
     "ms": "^2.1.2",
+    "node-vault": "^0.9.11",
     "swagger-ui-express": "^4.0.7",
     "winston": "^3.2.1"
   }
