change diff function and structure local dev lifecycle enhancement

--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,12 @@ PORT=3000
 
 # Mongo Configuration
 MONGO_HOST=
+MONGO_PORT=
 MONGO_DB=
 MONGO_USER=
 MONGO_PASS=
+# this takes precedence if provided over the previous entries (easier for local dev)
+MONGO_URL=
 
 # Auth Configuration
 AUTH_ENABLED=false
