--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "husky": "^3.0.5",
     "mocha": "^6.1.4",
     "nodemon": "^1.19.1",
+    "prettier": "1.17.0",
     "testcontainers": "^1.1.19",
     "ts-node": "^8.3.0",
     "tslint": "^5.18.0",
