--- a/package.json
+++ b/package.json
@@ -45,14 +45,14 @@
     "@types/node-vault": "^0.9.0",
     "@types/swagger-ui-express": "^3.0.1",
     "@types/winston": "^2.4.4",
-    "chai": "^4.2.0",
+    "chai": "^4.3.6",
     "chai-http": "^4.3.0",
     "concurrently": "^5.3.0",
-    "gitmoji-cli": "^3.2.18",
-    "husky": "^3.0.5",
-    "mocha": "^6.2.3",
-    "nodemon": "^2.0.7",
-    "prettier": "1.17.0",
+    "gitmoji-cli": "^4.8.0",
+    "husky": "^7.0.4",
+    "mocha": "^9.2.0",
+    "nodemon": "^2.0.15",
+    "prettier": "^2.5.1",
     "testcontainers": "^1.1.19",
     "ts-node": "^8.3.0",
     "tslint": "^5.18.0",
