--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "printWidth": 120,
     "trailingComma": "all",
     "singleQuote": true,
-    "arrowParens": "always"
+    "arrowParens": "always",
+    "useTabs": true
   }
 }
