--- a/package.json
+++ b/package.json
@@ -1,76 +1,78 @@
 {
-  "name": "lectern",
-  "version": "1.14.0",
-  "description": "Data Dictionary Management",
-  "scripts": {
-    "start": "npm run serve",
-    "build": "npm run build-ts",
-    "serve": "node dist/server.js",
-    "watch-node": "nodemon dist/server.js",
-    "test": "mocha --timeout 35000 --exit -r ts-node/register test/**/*.ts",
-    "watch-test": "mocha --watch --timeout 35000 --exit -r ts-node/register test/**/*.ts",
-    "build-ts": "tsc",
-    "watch-ts": "tsc -w",
-    "debug": "npm run build && npm run watch-debug",
-    "serve-debug": "nodemon --inspect dist/server.js",
-    "watch-debug": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec node --inspect-brk -r ts-node/register ./src/server.ts",
-    "gitmoji-config": "gitmoji -g",
-    "commit": "gitmoji -c"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/overture-stack/lectern.git"
-  },
-  "author": "andricDu",
-  "license": "AGPL-3.0",
-  "bugs": {
-    "url": "https://github.com/overture-stack/lectern/issues"
-  },
-  "homepage": "https://github.com/overture-stack/lectern#readme",
-  "devDependencies": {
-    "@types/body-parser": "^1.19.2",
-    "@types/chai": "^4.1.7",
-    "@types/errorhandler": "0.0.32",
-    "@types/express": "^4.17.13",
-    "@types/jsonwebtoken": "^8.3.2",
-    "@types/lodash": "^4.14.136",
-    "@types/memoizee": "^0.4.7",
-    "@types/mocha": "^5.2.7",
-    "@types/ms": "^0.7.31",
-    "@types/swagger-ui-express": "^3.0.1",
-    "chai": "^4.3.6",
-    "chai-http": "^4.3.0",
-    "concurrently": "^5.3.0",
-    "gitmoji-cli": "^4.8.0",
-    "husky": "^3.1.0",
-    "mocha": "^9.2.0",
-    "nodemon": "^2.0.15",
-    "prettier": "^2.8.0",
-    "testcontainers": "^1.1.19",
-    "ts-node": "^10.0.0",
-    "typescript": "^5.0.0"
-  },
-  "dependencies": {
-    "ajv": "^8.0.0",
-    "axios": "^1.0.0",
-    "body-parser": "^1.19.2",
-    "dotenv": "^16.0.0",
-    "errorhandler": "^1.5.1",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.21",
-    "memoizee": "^0.4.15",
-    "mongoose": "^7.0.0",
-    "ms": "^2.1.3",
-    "node-vault": "^0.9.22",
-    "swagger-ui-express": "^4.3.0",
-    "winston": "^3.6.0"
-  },
-  "prettier": {
-    "printWidth": 120,
-    "trailingComma": "all",
-    "singleQuote": true,
-    "arrowParens": "always",
-    "useTabs": true
-  }
+	"name": "lectern",
+	"version": "2.0.0-next0",
+	"description": "Data Dictionary Management",
+	"scripts": {
+		"start": "npm run serve",
+		"build": "npm run build-ts",
+		"serve": "node dist/server.js",
+		"watch-node": "nodemon dist/server.js",
+		"test": "mocha --timeout 35000 --exit -r ts-node/register test/**/*.ts",
+		"watch-test": "mocha --watch --timeout 35000 --exit -r ts-node/register test/**/*.ts",
+		"build-ts": "tsc",
+		"watch-ts": "tsc -w",
+		"debug": "npm run build && npm run watch-debug",
+		"serve-debug": "nodemon --inspect dist/server.js",
+		"watch-debug": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec node --inspect -r ts-node/register ./src/server.ts",
+		"gitmoji-config": "gitmoji -g",
+		"commit": "gitmoji -c"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/overture-stack/lectern.git"
+	},
+	"author": "andricDu",
+	"license": "AGPL-3.0",
+	"bugs": {
+		"url": "https://github.com/overture-stack/lectern/issues"
+	},
+	"homepage": "https://github.com/overture-stack/lectern#readme",
+	"devDependencies": {
+		"@types/body-parser": "^1.19.2",
+		"@types/chai": "^4.1.7",
+		"@types/errorhandler": "0.0.32",
+		"@types/express": "^4.17.13",
+		"@types/jsonwebtoken": "^8.3.2",
+		"@types/lodash": "^4.14.136",
+		"@types/memoizee": "^0.4.7",
+		"@types/mocha": "^5.2.7",
+		"@types/ms": "^0.7.31",
+		"@types/swagger-ui-express": "^3.0.1",
+		"chai": "^4.3.6",
+		"chai-http": "^4.3.0",
+		"concurrently": "^5.3.0",
+		"gitmoji-cli": "^4.8.0",
+		"husky": "^3.1.0",
+		"mocha": "^9.2.0",
+		"nodemon": "^2.0.15",
+		"prettier": "^2.8.0",
+		"testcontainers": "^1.1.19",
+		"ts-node": "^10.0.0",
+		"typescript": "^5.0.0"
+	},
+	"dependencies": {
+		"ajv": "^8.0.0",
+		"axios": "^1.0.0",
+		"body-parser": "^1.19.2",
+		"dotenv": "^16.0.0",
+		"errorhandler": "^1.5.1",
+		"express": "^4.18.2",
+		"immer": "^10.0.2",
+		"jsonwebtoken": "^8.5.1",
+		"lodash": "^4.17.21",
+		"memoizee": "^0.4.15",
+		"mongoose": "^7.0.0",
+		"ms": "^2.1.3",
+		"node-vault": "^0.9.22",
+		"swagger-ui-express": "^4.3.0",
+		"winston": "^3.6.0",
+		"zod": "^3.21.4"
+	},
+	"prettier": {
+		"printWidth": 120,
+		"trailingComma": "all",
+		"singleQuote": true,
+		"arrowParens": "always",
+		"useTabs": true
+	}
 }
