--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,16 +5,12 @@
 		"esModuleInterop": true,
 		"allowSyntheticDefaultImports": true,
 		"target": "ESNext",
-		"noImplicitAny": true,
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
 		"sourceMap": true,
 		"outDir": "dist",
 		"baseUrl": ".",
-		"skipLibCheck": true,
-		"paths": {
-			"*": ["node_modules/*", "src/types/*"]
-		}
+		"skipLibCheck": true
 	},
 	"include": ["src/**/*"]
 }
