--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 	"devDependencies": {
 		"@types/body-parser": "^1.19.2",
 		"@types/chai": "^4.1.7",
+		"@types/chai-as-promised": "^7.1.5",
 		"@types/errorhandler": "0.0.32",
 		"@types/express": "^4.17.13",
 		"@types/jsonwebtoken": "^8.3.2",
@@ -37,8 +38,10 @@
 		"@types/memoizee": "^0.4.7",
 		"@types/mocha": "^5.2.7",
 		"@types/ms": "^0.7.31",
+		"@types/sinon": "^10.0.15",
 		"@types/swagger-ui-express": "^3.0.1",
 		"chai": "^4.3.6",
+		"chai-as-promised": "^7.1.1",
 		"chai-http": "^4.3.0",
 		"concurrently": "^5.3.0",
 		"gitmoji-cli": "^4.8.0",
@@ -46,6 +49,7 @@
 		"mocha": "^9.2.0",
 		"nodemon": "^2.0.15",
 		"prettier": "^2.8.0",
+		"sinon": "^15.2.0",
 		"testcontainers": "^1.1.19",
 		"ts-node": "^10.0.0",
 		"typescript": "^5.0.0"
