Mocha Testing Config separate from npm scripts

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
 		"build": "npm run build-ts",
 		"serve": "node dist/server.js",
 		"watch-node": "nodemon dist/server.js",
-		"test": "mocha --timeout 35000 --exit -r ts-node/register test/**/*.ts",
-		"watch-test": "mocha --watch --timeout 35000 --exit -r ts-node/register test/**/*.ts",
+		"test": "mocha ",
+		"watch-test": "mocha --watch",
 		"build-ts": "tsc",
 		"watch-ts": "tsc -w",
 		"debug": "npm run build && npm run watch-debug",
