--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
 		"sourceMap": true,
 		"outDir": "dist",
 		"baseUrl": ".",
-		"skipLibCheck": true
+		"skipLibCheck": true,
+		"noImplicitAny": true
 	},
 	"include": ["src/**/*"]
 }
