--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "Data Dictionary Management",
 	"scripts": {
 		"start": "npm run serve",
-		"build": "npm run build-ts",
+		"build": "npm run build:json-schema && npm run build-ts",
+		"build:json-schema": "node -r ts-node/register ./scripts/buildMetaSchema.ts",
 		"serve": "node dist/server.js",
 		"watch-node": "nodemon dist/server.js",
 		"test": "mocha ",
@@ -52,7 +53,8 @@
 		"sinon": "^15.2.0",
 		"testcontainers": "^1.1.19",
 		"ts-node": "^10.0.0",
-		"typescript": "^5.0.0"
+		"typescript": "^5.0.0",
+		"zod-to-json-schema": "^3.21.3"
 	},
 	"dependencies": {
 		"ajv": "^8.0.0",
