--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "lectern",
-	"version": "2.0.0-next0",
+	"version": "2.0.0-next.0",
 	"description": "Data Dictionary Management",
 	"scripts": {
 		"start": "npm run serve",
