--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
 	"description": "Data Dictionary Management",
 	"scripts": {
 		"start": "npm run serve",
-		"build": "npm run build:json-schema && npm run build-ts",
-		"build:json-schema": "node -r ts-node/register ./scripts/buildMetaSchema.ts",
 		"serve": "node dist/server.js",
-		"watch-node": "nodemon dist/server.js",
+		"watch-serve": "nodemon dist/server.js",
+		"build": "npm run build-ts",
 		"test": "mocha ",
 		"watch-test": "mocha --watch",
 		"build-ts": "tsc",
@@ -15,8 +14,7 @@
 		"debug": "npm run build && npm run watch-debug",
 		"serve-debug": "nodemon --inspect dist/server.js",
 		"watch-debug": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec node --inspect -r ts-node/register ./src/server.ts",
-		"gitmoji-config": "gitmoji -g",
-		"commit": "gitmoji -c"
+		"generate": "node -r ts-node/register ./scripts/buildMetaSchema.ts"
 	},
 	"repository": {
 		"type": "git",
@@ -45,7 +43,6 @@
 		"chai-as-promised": "^7.1.1",
 		"chai-http": "^4.3.0",
 		"concurrently": "^5.3.0",
-		"gitmoji-cli": "^4.8.0",
 		"husky": "^3.1.0",
 		"mocha": "^9.2.0",
 		"nodemon": "^2.0.15",
