--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"debug": "npm run build && npm run watch-debug",
 		"serve-debug": "nodemon --inspect dist/server.js",
 		"watch-debug": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec node --inspect -r ts-node/register ./src/server.ts",
-		"generate": "node -r ts-node/register ./scripts/buildMetaSchema.ts"
+		"generate": "npm run generate:metaschema",
+		"generate:metaschema": "node -r ts-node/register ./scripts/generateMetaSchema.ts"
 	},
 	"repository": {
 		"type": "git",
