README documentation updated for run instructions and configuration of the server

--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -30,6 +30,5 @@ VAULT_URL=http://localhost:8200
 VAULT_SECRETS_PATH=/kv/lectern
 # Vault Token Auth
 VAULT_TOKEN=00000000-0000-0000-0000-000000000000
-# Vault K8s AUth
+# Vault K8s Auth
 VAULT_ROLE=
-VAULT_KUBERNETES_SECRET_FILE=
