--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -3,17 +3,10 @@
 	"version": "2.0.0-next.0",
 	"description": "Overture Data Dictionary Management",
 	"scripts": {
-		"start": "ts-node -T src/server.ts",
-		"watch-serve": "nodemon dist/server.js",
-		"build": "npm run build:clean && npm run build-ts",
-		"build:clean": "rm -rf ./dist && mkdir ./dist",
-		"test": "nyc mocha",
-		"watch-test": "nyc mocha --watch",
-		"build-ts": "tsc",
-		"watch-ts": "tsc -w",
-		"debug": "npm run build && npm run watch-debug",
-		"serve-debug": "nodemon --inspect dist/server.js",
-		"watch-debug": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec node --inspect -r ts-node/register ./src/server.ts"
+		"build": "tsc",
+		"debug": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec node --inspect -r ts-node/register ./src/server.ts",
+		"start": "NODE_ENV=production ts-node -T src/server.ts",
+		"test": "nyc mocha"
 	},
 	"repository": {
 		"type": "git",
