--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "lectern",
-	"version": "2.0.0-next.0",
+	"version": "1.15.0",
 	"description": "Data Dictionary Schema Manager and Validator",
 	"main": "index.js",
 	"scripts": {
