--- a/libraries/common/package.json
+++ b/libraries/common/package.json
@@ -5,7 +5,7 @@
 	"main": "dist/index.js",
 	"scripts": {
 		"build": "pnpm build:clean && tsc",
-		"build:clean": "rimraf -rf dist/ && mkdir dist"
+		"build:clean": "rimraf dist/ && mkdir dist"
 	},
 	"keywords": [],
 	"author": "Ontario Institute for Cancer Research",
