--- a/libraries/dictionary/package.json
+++ b/libraries/dictionary/package.json
@@ -5,7 +5,7 @@
 	"main": "dist/index.js",
 	"scripts": {
 		"build": "pnpm build:clean && tsc",
-		"build:clean": "rimraf -rf dist/ && mkdir dist",
+		"build:clean": "rimraf dist/ && mkdir dist",
 		"test": "nyc mocha"
 	},
 	"keywords": [],
