--- a/libraries/common/package.json
+++ b/libraries/common/package.json
@@ -5,9 +5,12 @@
 	"main": "dist/index.js",
 	"scripts": {
 		"build": "pnpm build:clean && tsc",
-		"build:clean": "rm -rf dist/ && mkdir dist"
+		"build:clean": "rimraf dist/ && mkdir dist"
 	},
 	"keywords": [],
 	"author": "Ontario Institute for Cancer Research",
-	"license": "AGPL-3.0"
+	"license": "AGPL-3.0",
+	"devDependencies": {
+		"rimraf": "^3.0.2"
+	}
 }
