--- a/libraries/dictionary/package.json
+++ b/libraries/dictionary/package.json
@@ -5,7 +5,7 @@
 	"main": "dist/index.js",
 	"scripts": {
 		"build": "pnpm build:clean && tsc",
-		"build:clean": "rm -rf dist/ && mkdir dist",
+		"build:clean": "rimraf dist/ && mkdir dist",
 		"test": "nyc mocha"
 	},
 	"keywords": [],
@@ -18,6 +18,7 @@
 		"zod": "^3.21.4"
 	},
 	"devDependencies": {
-		"@types/lodash": "^4.14.195"
+		"@types/lodash": "^4.14.195",
+		"rimraf": "^3.0.2"
 	}
 }
