Add test folders to TS path but exclude from build

--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -14,8 +14,9 @@
 		"sourceMap": true,
 		"declaration": true,
 		"outDir": "dist",
-		"skipLibCheck": true
+		"skipLibCheck": true,
+		"noUncheckedIndexedAccess": true
 	},
-	"include": ["./src/**/*.ts"],
+	"include": ["./src/**/*.ts", "./test/**/*.ts"],
 	"exclude": ["node_modules/"]
 }
