--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -8,7 +8,7 @@
 	"typings": "./dist/index.d.ts",
 	"description": "TypeScript client to interact with Lectern servers and perform data validation versus Lectern dictionaries.",
 	"scripts": {
-		"build": "rimraf dist && tsc",
+		"build": "rimraf dist && tsc -p tsconfig.build.json",
 		"test": "nyc mocha --exit --timeout 5000 -r ts-node/register test/**.spec.ts",
 		"lint": "tslint -c tslint.json -e node_modules -p tsconfig.json"
 	},
