--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -11,8 +11,7 @@
 		"esModuleInterop": true,
 		"noEmit": true,
 		"outDir": "dist",
-		"baseUrl": "./src",
 		"skipLibCheck": true
 	},
-	"include": ["./src/**/*.ts"]
+	"include": ["./src/**/*.ts", "./test/**/*.ts"]
 }
