--- a/packages/dictionary/package.json
+++ b/packages/dictionary/package.json
@@ -2,6 +2,9 @@
 	"name": "@overture-stack/lectern-dictionary",
 	"version": "0.1.0-beta.1",
 	"description": "",
+	"files": [
+		"dist/"
+	],
 	"main": "dist/index.js",
 	"scripts": {
 		"build": "pnpm build:clean && tsc",
