--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@overture-stack/lectern-server",
 	"private": true,
-	"version": "2.0.0-next.0",
+	"version": "2.0.0-beta.1",
 	"description": "Overture Data Dictionary Management",
 	"scripts": {
 		"build": "tsc -p tsconfig.build.json",
