Cleanup for Beta-version Client Release (#224)
* Strictly define package exported functions, types, and files

* Standardize package versions to `2.0.0-beta.1`

* READMEs cleaned up for NPM publishing

* Rename exported function variables to have same grammatic case

* Remove redundancy in lectern-server description

* README typos and clarifications

* correct TypeScript casing typos

* Remove unused imports, clean TSDoc comment blocks

* Correcting typos and grammatical errors in documentation

---------

Co-authored-by: Anders Richardsson <2107110+justincorrigible@users.noreply.github.com>

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,11 +1,11 @@
 {
 	"name": "@overture-stack/lectern-client",
-	"version": "1.5.0",
+	"version": "2.0.0-beta.1",
 	"files": [
 		"dist/"
 	],
 	"main": "./dist/index.js",
-	"typings": "./dist/index.d.ts",
+	"types": "./dist/index.d.ts",
 	"description": "TypeScript client to interact with Lectern servers and perform data validation versus Lectern dictionaries.",
 	"scripts": {
 		"build": "rimraf dist && tsc -p tsconfig.build.json",
