--- a/packages/dictionary/package.json
+++ b/packages/dictionary/package.json
@@ -1,7 +1,10 @@
 {
 	"name": "@overture-stack/lectern-dictionary",
-	"version": "0.1.0-beta.1",
+	"version": "2.0.0-beta.1",
 	"description": "",
+	"files": [
+		"dist/"
+	],
 	"main": "dist/index.js",
 	"scripts": {
 		"build": "pnpm build:clean && tsc",
