rename test:integration script name

--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
 		"build:validation": "pnpm nx build @overture-stack/lectern-validation",
 		"build:server": "pnpm nx build @overture-stack/lectern-server",
 		"build:client": "pnpm nx build @overture-stack/lectern-client",
-		"test:all": "pnpm nx run-many --all --target=test,integration-test",
+		"test:all": "pnpm nx run-many --all --target=test,test:integration",
 		"test:unit:all": "pnpm nx run-many --all --target=test",
 		"test:unit:dictionary": "pnpm nx test @overture-stack/lectern-dictionary",
 		"test:unit:validation": "pnpm nx test @overture-stack/lectern-validation",
 		"test:unit:server": "pnpm nx test @overture-stack/lectern-server",
 		"test:unit:client": "pnpm nx test @overture-stack/lectern-client",
-		"test:integration:server": "pnpm nx integration-test @overture-stack/lectern-server",
+		"test:integration:server": "pnpm nx test:integration @overture-stack/lectern-server",
 		"generate": "pnpm build:dictionary && pnpm -C scripts generate"
 	},
 	"keywords": [],
