--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -8,7 +8,7 @@
 		"debug": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec node --inspect -r ts-node/register ./src/server.ts",
 		"start": "NODE_ENV=production ts-node -T src/server.ts",
 		"test": "nyc mocha",
-		"integration-test": "nyc mocha --config .mocharc.integration.json"
+		"test:integration": "nyc mocha --config .mocharc.integration.json"
 	},
 	"repository": {
 		"type": "git",
