Enable CORS for server by configuration

--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -15,6 +15,9 @@
 # AUTH_ENABLED=false
 # EGO_API=
 # SCOPE=
+# # CORS allowed origins can be a comma separated list of the allowed domains.
+# # Leave empty to not allow any web connections (default). Use * to allow all.
+# CORS_ALLOWED_ORIGINS=
 
 # ##### Vault Configuration
 # ##### If Vault is connected, Lectern Server will attempt to read values from the provided VAULT_SECRETS_PATH
