Refactor client rest module to work in browser or server

--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -15,7 +15,8 @@
 		"declaration": true,
 		"outDir": "dist",
 		"skipLibCheck": true,
-		"noUncheckedIndexedAccess": true
+		"noUncheckedIndexedAccess": true,
+		"noErrorTruncation": true
 	},
 	"include": ["./src/**/*.ts", "./test/**/*.ts"],
 	"exclude": ["node_modules/"]
