--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -21,15 +21,18 @@
 	},
 	"homepage": "https://github.com/overture-stack/lectern#readme",
 	"devDependencies": {
-		"@types/body-parser": "^1.19.5",
+		"@types/chai": "^4.3.16",
+		"@types/chai-http": "^4.2.4",
+		"@types/cors": "^2.8.18",
 		"@types/errorhandler": "0.0.32",
-		"@types/express": "^4.17.21",
+		"@types/express": "^5.0.2",
 		"@types/jsonwebtoken": "^8.5.9",
 		"@types/lodash": "^4.17.7",
 		"@types/memoizee": "^0.4.11",
+		"@types/mocha": "^10.0.10",
 		"@types/ms": "^0.7.34",
 		"@types/superagent": "^4.1.24",
-		"@types/swagger-ui-express": "^3.0.1",
+		"@types/swagger-ui-express": "^4.1.8",
 		"concurrently": "^5.3.0",
 		"husky": "^3.1.0",
 		"nodemon": "^2.0.22",
@@ -42,10 +45,10 @@
 		"@overture-stack/lectern-dictionary": "workspace:^",
 		"ajv": "^8.17.1",
 		"axios": "^1.7.2",
-		"body-parser": "^1.20.2",
+		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
 		"errorhandler": "^1.5.1",
-		"express": "^4.19.2",
+		"express": "^5.1.0",
 		"immer": "^10.1.1",
 		"jsonwebtoken": "^8.5.1",
 		"lodash": "^4.17.21",
@@ -53,7 +56,7 @@
 		"mongoose": "^7.8.0",
 		"ms": "^2.1.3",
 		"node-vault": "^0.9.22",
-		"swagger-ui-express": "^4.6.3",
+		"swagger-ui-express": "^5.0.1",
 		"winston": "^3.13.1",
 		"zod": "^3.23.8"
 	}
