--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -9,7 +9,6 @@
 	"description": "TypeScript client to interact with Lectern servers and perform data validation versus Lectern dictionaries.",
 	"scripts": {
 		"build": "rimraf dist && tsc -p tsconfig.build.json",
-		"test": "nyc mocha --exit --timeout 5000 -r ts-node/register test/**.spec.ts",
 		"lint": "tslint -c tslint.json -e node_modules -p tsconfig.json"
 	},
 	"repository": {
@@ -40,11 +39,10 @@
 	"dependencies": {
 		"@overture-stack/lectern-dictionary": "workspace:^",
 		"@overture-stack/lectern-validation": "workspace:^",
+		"axios": "^1.7.2",
 		"cd": "^0.3.3",
 		"lodash": "^4.17.21",
-		"node-fetch": "^2.7.0",
-		"promise-tools": "^2.1.0",
-		"winston": "^3.13.1"
+		"zod": "^3.23.8"
 	},
 	"author": "Ontario Institute for Cancer Research"
 }
