--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"nx": "^16.10.0",
 		"nyc": "^15.1.0",
 		"prettier": "^3.3.3",
+		"rimraf": "^5.0.9",
 		"sinon": "^15.2.0",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.5.4"
