--- a/packages/dictionary/package.json
+++ b/packages/dictionary/package.json
@@ -20,7 +20,6 @@
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
-		"@types/lodash": "^4.17.7",
-		"rimraf": "^5.0.9"
+		"@types/lodash": "^4.17.7"
 	}
 }
