--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -27,6 +27,8 @@
 		"@types/errorhandler": "0.0.32",
 		"@types/express": "^5.0.2",
 		"@types/jsonwebtoken": "^8.5.9",
+		"@types/jszip": "^3.4.1",
+		"@types/json2csv": "5.0.7",
 		"@types/lodash": "^4.17.7",
 		"@types/memoizee": "^0.4.11",
 		"@types/mocha": "^10.0.10",
@@ -51,6 +53,7 @@
 		"express": "^5.1.0",
 		"immer": "^10.1.1",
 		"jsonwebtoken": "^8.5.1",
+		"jszip": "^3.10.1",
 		"lodash": "^4.17.21",
 		"memoizee": "^0.4.17",
 		"mongoose": "^7.8.0",
