--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -35,6 +35,7 @@
 		"@storybook/addon-essentials": "^8.6.14",
 		"@storybook/blocks": "^8.6.14",
 		"@storybook/experimental-addon-test": "^8.6.14",
+		"@storybook/icons": "^1.4.0",
 		"@storybook/manager-api": "^8.6.14",
 		"@storybook/react": "^8.6.14",
 		"@storybook/react-vite": "^8.6.14",
