--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -22,13 +22,14 @@
 	"dependencies": {
 		"@emotion/react": "^11.14.0",
 		"@emotion/styled": "^11.14.0",
+		"@overture-stack/lectern-client": "workspace:*",
 		"@overture-stack/lectern-dictionary": "workspace:*",
 		"@overture-stack/lectern-validation": "workspace:*",
-		"@overture-stack/lectern-client": "workspace:*",
 		"@tanstack/react-table": "^8.21.3",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"react-loading-skeleton": "^3.5.0",
+		"react-modal": "^3.16.3",
 		"reactflow": "^11.11.4",
 		"zod": "^3.23.8"
 	},
@@ -46,6 +47,7 @@
 		"@types/lodash": "^4.17.7",
 		"@types/react": "^19.1.5",
 		"@types/react-dom": "^19.1.5",
+		"@types/react-modal": "^3.16.3",
 		"@vitejs/plugin-react": "^4.5.0",
 		"@vitest/browser": "^3.1.4",
 		"@vitest/coverage-v8": "^3.1.4",
