feat(auth): update .env.example

--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -13,6 +13,11 @@
 
 # ##### Auth Configuration
 # AUTH_ENABLED=false
+# AUTHZ_ENDPOINT=
+# AUTH_PROVIDER_HOST=
+# AUTH_CLIENT_ID=
+# AUTH_CLIENT_SECRET=
+# AUTH_GROUP_ADMIN=
 # EGO_API=
 # SCOPE=
 # # CORS allowed origins can be a comma separated list of the allowed domains.
