fix(auth): update .env names and create authzClient

--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -13,10 +13,10 @@
 
 # ##### Auth Configuration
 # AUTH_ENABLED=false
-# AUTHZ_ENDPOINT=
+# AUTHZ_ENDPOINT=  # Path must end with `/` 
 # AUTH_CLIENT_ID=
 # AUTH_CLIENT_SECRET=
-# AUTH_GROUP_ADMIN=
+# AUTHZ_GROUP_ADMIN=
 # EGO_API=
 # SCOPE=
 # # CORS allowed origins can be a comma separated list of the allowed domains.
