--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -26,9 +26,9 @@
 		"@types/cors": "^2.8.18",
 		"@types/errorhandler": "0.0.32",
 		"@types/express": "^5.0.2",
+		"@types/json2csv": "5.0.7",
 		"@types/jsonwebtoken": "^8.5.9",
 		"@types/jszip": "^3.4.1",
-		"@types/json2csv": "5.0.7",
 		"@types/lodash": "^4.17.7",
 		"@types/memoizee": "^0.4.11",
 		"@types/mocha": "^10.0.10",
@@ -60,6 +60,7 @@
 		"ms": "^2.1.3",
 		"node-vault": "^0.9.22",
 		"swagger-ui-express": "^5.0.1",
+		"url-join": "^5.0.0",
 		"winston": "^3.13.1",
 		"zod": "^3.23.8"
 	}
