fix(auth): change extractATfromHeader solution and update comments

--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -13,7 +13,7 @@
 
 # ##### Auth Configuration
 # AUTH_ENABLED=false
-# AUTHZ_ENDPOINT=  # Path must end with `/` 
+# AUTHZ_ENDPOINT= 
 # AUTH_CLIENT_ID=
 # AUTH_CLIENT_SECRET=
 # AUTHZ_GROUP_ADMIN=
