--- a/packages/dictionary/tsconfig.json
+++ b/packages/dictionary/tsconfig.json
@@ -2,8 +2,8 @@
 	"compilerOptions": {
 		"target": "ESNext",
 		"lib": ["ESNext"],
-		"module": "CommonJS",
-		"moduleResolution": "node",
+		"module": "nodenext",
+		"moduleResolution": "nodenext",
 		"resolveJsonModule": true,
 		"strict": true,
 		"noImplicitAny": true,
