--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,14 +1,13 @@
 {
 	"name": "@overture-stack/lectern-ui",
 	"version": "0.0.0",
-	"private": true,
 	"description": "React components for exploring Lectern dictionaries",
 	"files": [
 		"dist/"
 	],
 	"exports": {
-		"./data-validator": "./dist/data-validator/index.js",
-		"./editor": "./dist/editor/index.js"
+		".": "./dist/index.js",
+		"./dictionary-table": "./dist/viewer-table/index.js"
 	},
 	"types": "dist/index.d.ts",
 	"scripts": {
