--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@overture-stack/lectern-ui",
-	"version": "0.0.0",
+	"version": "0.0.1-beta.0",
 	"description": "React components for exploring Lectern dictionaries",
 	"files": [
 		"dist/"
